Fix broken styles

--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 1.2em;
   font-family: 'Helvetica', 'Arial', 'Sans-Serif';
 }
 
@@ -67,8 +67,4 @@ ul.posts {
 
 ul.posts li {
   list-style: none;
-}
-
-.inline-itm {
-  display: inline;
 }
